Added Swagger tags to GET and DELETE routes
